{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 133,
  "lineage": "b27d5755-236b-c341-37a8-1ba6b21736d7",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "policy_group_aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "aks_app_rules",
                "priority": 205,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": null,
                    "destination_fqdn_tags": [
                      "AzureKubnernetesService"
                    ],
                    "destination_fqdns": null,
                    "destination_urls": null,
                    "name": "aks_service",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null,
                    "terminate_tls": false,
                    "web_categories": null
                  }
                ]
              },
              {
                "action": "Allow",
                "name": "allow_debian_updates",
                "priority": 210,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": null,
                    "destination_fqdn_tags": null,
                    "destination_fqdns": [
                      "deb.debian.org"
                    ],
                    "destination_urls": null,
                    "name": "allow_deb_debian_org",
                    "protocols": [
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null,
                    "terminate_tls": false,
                    "web_categories": null
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/policy_group_aks",
            "name": "policy_group_aks",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "aks_network_rules",
                "priority": 201,
                "rule": [
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "443"
                    ],
                    "name": "https",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "53"
                    ],
                    "name": "dns",
                    "protocols": [
                      "UDP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "123"
                    ],
                    "name": "time",
                    "protocols": [
                      "UDP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "1194"
                    ],
                    "name": "tunnel_udp",
                    "protocols": [
                      "UDP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "9000"
                    ],
                    "name": "tunnel_tcp",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "10.1.0.0/16"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "123"
                    ],
                    "name": "Time",
                    "protocols": [
                      "UDP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "53"
                    ],
                    "name": "DNS",
                    "protocols": [
                      "UDP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": null
                  },
                  {
                    "destination_addresses": [
                      "AzureContainerRegistry",
                      "MicrosoftContainerRegistry",
                      "AzureActiveDirectory"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "*"
                    ],
                    "name": "ServiceTags",
                    "protocols": [
                      "Any"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": null
                  }
                ]
              }
            ],
            "priority": 200,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_virtual_network.vnet_spoke_aks",
            "data.terraform_remote_state.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route_to_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/routeTables/route-table-to-firewall/routes/route-to-firewall",
            "name": "route-to-firewall",
            "next_hop_in_ip_address": "172.16.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "rg-lzaks-spoke-aks-infra",
            "route_table_name": "route-table-to-firewall",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.route_table_to_firewall",
            "data.terraform_remote_state.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route_table_to_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": true,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/routeTables/route-table-to-firewall",
            "location": "westeurope",
            "name": "route-table-to-firewall",
            "resource_group_name": "rg-lzaks-spoke-aks-infra",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "route-to-firewall",
                "next_hop_in_ip_address": "172.16.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/virtualNetworks/vnet-spoke-aks/subnets/subnet-nodes",
              "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/virtualNetworks/vnet-spoke-aks/subnets/subnet-nodes-poolappsamd",
              "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/virtualNetworks/vnet-spoke-aks/subnets/subnet-pods",
              "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/virtualNetworks/vnet-spoke-aks/subnets/subnet-pods-poolappsamd"
            ],
            "tags": {
              "architecture": "Hub\u0026Spoke",
              "environment": "development",
              "source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_agc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.200.0/24"
            ],
            "delegation": [
              {
                "name": "delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.ServiceNetworking/trafficControllers"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/virtualNetworks/vnet-spoke-aks/subnets/subnet-agc",
            "name": "subnet-agc",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-lzaks-spoke-aks-infra",
            "virtual_network_name": "vnet-spoke-aks"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_spoke_aks",
            "data.terraform_remote_state.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_pe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/virtualNetworks/vnet-spoke-aks/subnets/subnet-pe",
            "name": "subnet-pe",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-lzaks-spoke-aks-infra",
            "virtual_network_name": "vnet-spoke-aks"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_spoke_aks",
            "data.terraform_remote_state.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_spoke_aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d528bb5e-1458-4ed4-8980-0881a730b098",
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/virtualNetworks/vnet-spoke-aks",
            "location": "westeurope",
            "name": "vnet-spoke-aks",
            "resource_group_name": "rg-lzaks-spoke-aks-infra",
            "subnet": [
              {
                "address_prefix": "10.1.2.0/28",
                "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/virtualNetworks/vnet-spoke-aks/subnets/subnet-pe",
                "name": "subnet-pe",
                "security_group": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/networkSecurityGroups/vnet-spoke-aks-subnet-pe-nsg-westeurope"
              },
              {
                "address_prefix": "10.1.200.0/24",
                "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/virtualNetworks/vnet-spoke-aks/subnets/subnet-agc",
                "name": "subnet-agc",
                "security_group": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/networkSecurityGroups/nsg-vnet-spoke-aks"
              },
              {
                "address_prefix": "10.1.240.0/20",
                "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/virtualNetworks/vnet-spoke-aks/subnets/subnet-pods",
                "name": "subnet-pods",
                "security_group": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/networkSecurityGroups/nsg-vnet-spoke-aks"
              },
              {
                "address_prefix": "10.1.3.0/24",
                "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/virtualNetworks/vnet-spoke-aks/subnets/subnet-nodes",
                "name": "subnet-nodes",
                "security_group": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/networkSecurityGroups/nsg-vnet-spoke-aks"
              },
              {
                "address_prefix": "10.1.7.0/24",
                "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/virtualNetworks/vnet-spoke-aks/subnets/subnet-nodes-poolappsamd",
                "name": "subnet-nodes-poolappsamd",
                "security_group": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/networkSecurityGroups/nsg-vnet-spoke-aks"
              },
              {
                "address_prefix": "10.1.8.0/24",
                "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/virtualNetworks/vnet-spoke-aks/subnets/subnet-pods-poolappsamd",
                "name": "subnet-pods-poolappsamd",
                "security_group": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/networkSecurityGroups/nsg-vnet-spoke-aks"
              }
            ],
            "tags": {
              "architecture": "Hub\u0026Spoke",
              "environment": "development",
              "source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "data.terraform_remote_state.hub"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.virtual_network_peering_hub_and_spoke_aks[0]",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet_peering_hub_to_spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/virtualNetworks/vnet-hub/virtualNetworkPeerings/vnet_peering_hub_to_vnet-spoke-aks",
            "name": "vnet_peering_hub_to_vnet-spoke-aks",
            "remote_virtual_network_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/virtualNetworks/vnet-spoke-aks",
            "resource_group_name": "rg-lzaks-hub-weu",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_spoke_aks",
            "data.terraform_remote_state.hub"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_network_peering_hub_and_spoke_aks[0]",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet_peering_spoke_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-spoke-aks-infra/providers/Microsoft.Network/virtualNetworks/vnet-spoke-aks/virtualNetworkPeerings/vnet_peering_vnet-spoke-aks_to_hub",
            "name": "vnet_peering_vnet-spoke-aks_to_hub",
            "remote_virtual_network_id": "/subscriptions/82f6d75e-85f4-434a-ab74-5dddd9fa8910/resourceGroups/rg-lzaks-hub-weu/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "resource_group_name": "rg-lzaks-spoke-aks-infra",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-spoke-aks"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_spoke_aks",
            "data.terraform_remote_state.hub"
          ]
        }
      ]
    }
  ]
}